--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -5,7 +5,17 @@
         <h1 class="title">Hardware Division Portal</h1>
         <p class="subtitle">Welcome to your new app.</p>
     </div>
-
+    <div class="update-card">
+        <div class="card-header">
+            <h3>📋 V0.0.27.0</h3>
+        </div>
+        <div class="card-body">
+            <div class="update-item">
+                <span class="icon">✨</span>
+                <span>1. Implement the status update function on dahbaord page.</span>
+            </div>
+        </div>
+    </div>
     <div class="update-card">
         <div class="card-header">
             <h3>📋 V0.0.26.0</h3>
