--- a/Components/Pages/Dashboard.razor
+++ b/Components/Pages/Dashboard.razor
@@ -1155,6 +1155,7 @@
 
         // 呼叫子元件的 Show 方法，並傳入路徑
         fileUploadModal.Show(fullPath);
+        CloseContextMenu();
     }
 
     // 更新 HandleUploadsCompleted 方法以接收檔案列表
